# rocket

./: .gitignore  .gitmodules  .syntastic_c_config  CHANGELOG.md  CMakeLists.txt  COPYING  Makefile  README  README.md  examples.sln  linux-build.sh  sync_player.vcproj  test.rocket  tundra.lua  units.lua
.github/workflows/: main.yml  release.yml
basic_example/: basic_example.c
contrib/DotRocket/: DotRocket.sln
contrib/DotRocket/DotRocket/: DotRocket.vcxproj  DotRocket.vcxproj.filters
contrib/DotRocket/DotRocketClient/: DotRocketClient.vcxproj  DotRocketClient.vcxproj.filters
data/macosx/: appnib.xib
editor/: clientsocket.cpp  clientsocket.h  editor.aps  editor.cpp  editor.rc  editor.vcproj  resource.h  syncdocument.cpp  syncdocument.h  trackview.cpp  trackview.h
emgui/include/emgui/: Emgui.h  FontLayout.h  GFXBackend.h  Types.h
emgui/src/: Emgui.c  Emgui.h  Emgui_internal.h  GFXBackend.h  MicroknightFont.c  MicroknightFont.h  Types.h
emgui/src/GFXBackends/: OpenGLBackend.c
emgui/src/memory/: LinearAllocator.c  LinearAllocator.h
examples/: example_bass.cpp  example_sdl.c
lib/: base.h
ogl_editor/: .gitignore  CMakeLists.txt  COPYING  README.md  VS2010-GenerateSln.cmd  XCode3-GenerateProj.sh  komp  kompile  readme.md  readme.txt  tundra.lua  units.lua
ogl_editor/basic_example/: basic_example.c
ogl_editor/data/macosx/: appnib.xib  icon.icns  info.plist
ogl_editor/data/windows/: editor.aps
ogl_editor/emgui/include/emgui/: Emgui.h  GFXBackend.h  Types.h
ogl_editor/emgui/src/: Emgui.c  Emgui.h  Emgui_internal.h  GFXBackend.h
ogl_editor/emgui/src/GFXBackends/: OpenGLBackend.c
ogl_editor/scripts/: vs2013_vcvars32.bat  win32_build_debug.cmd  win32_build_release.cmd  win32_gen_vs_solution.cmd  win32_launch_vs.cmd
ogl_editor/src/: Commands.c  Commands.h  Dialog.h  Editor.c  Editor.h  GFXBackend.h  ImageData.c  ImageData.h  Menu.c  Menu.h  MicroknightFont.c  MinecraftiaFont.c  MinecraftiaFont.h  Music.h  MusicDecode.c  RemoteConnection.c  RemoteConnection.h  RenderAudio.c  RenderAudio.h  RocketGui.c  RocketGui.h  TrackData.c  TrackData.h  TrackView.c  TrackView.h  Window.h  clientsocket.h  loadsave.c  loadsave.h  main.c  minmax.h  rlog.c  rlog.h
ogl_editor/src/Core/: Types.h
ogl_editor/src/OpenGLBackend/: OpenGLBackend.c
ogl_editor/src/OpenGLRenderer/: OpenGLRenderer.c
ogl_editor/src/linux/: main.c
ogl_editor/src/macosx/: FileDialog.m  RocketView.h  RocketView.m  delegate.h  delegate.m  main.m
ogl_editor/src/windows/: Dialogs.c  RocketWindow.c
qt-editor/: trackview.cpp  trackview.h
research/: highdpi-scaling-support.md
scripts/: font_gen.py  format_code.sh  win32_gen_vs_solution.cmd  win32_launch_vs.cmd
src/: Commands.c  Commands.h  Dialog.h  Editor.c  Editor.h  GraphView.c  GraphView.h  ImageData.c  ImageData.h  Menu.c  Menu.h  MicroknightFont.c  MicroknightFont.h  MinecraftiaFont.c  MinecraftiaFont.h  Music.h  MusicDecode.c  RemoteConnection.c  RemoteConnection.h  RenderAudio.c  RenderAudio.h  TrackData.c  TrackData.h  TrackView.c  TrackView.h  Window.h  args.c  args.h  loadsave.c  loadsave.h  main.c  minmax.h  rlog.c  rlog.h  version.h.in
src/linux/: main._c  main.c  x11_dialogs.c
src/macosx/: FileDialog.m  RocketAppDelegate.h  RocketAppDelegate.m  RocketView.h  RocketView.m
src/windows/: Dialogs.c  RocketWindow.c  afxres.h  resource.h
sync/: base.h  device.c  device.h  track.c  track.h
